src/test/ui/traits/trait-alias/trait-alias-only-maybe-bound.stderr
error[E0224]: at least one trait is required for an object type
  --> $DIR/trait-alias-only-maybe-bound.rs:13:12
   |
LL | type _T0 = dyn _1;
   |            ^^^^^^

error[E0224]: at least one trait is required for an object type
  --> $DIR/trait-alias-only-maybe-bound.rs:19:12
   |
LL | type _T1 = dyn _2;
   |            ^^^^^^

error: aborting due to 2 previous errors

